add simple preview

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Mono&family=Share+Tech+Mono&display=swap');
 
 body {
-    // background-color: black;
-    background-image: url('https://images.wallpaperscraft.ru/image/single/planeta_kratery_kosmos_svet_61032_2560x1600.jpg');
+    background-color: black;
+    // background-image: url('https://images.wallpaperscraft.ru/image/single/galaktika_planety_svet_zvezdy_luchi_63575_1400x1050.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 22px;
