create system animation/add BG for Body

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="mainContainer">
+    <img src="../assets/planets/earth/RS-Header-Moon_840px_3.webp" class="moonBG" alt="">
     <app-header></app-header>
    <router-outlet></router-outlet>
 </div>
