--- a/src/app/pages/destinations/destinations.component.html
+++ b/src/app/pages/destinations/destinations.component.html
@@ -1,1 +1,6 @@
-<p>destinations works!</p>
+<div class="q2">
+    <div class="circle2">2</div>
+</div>
+<div class="q1">
+    <div class="circle1">1</div>
+</div>
