--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,13 @@
 .mainContainer {
     max-width: 1460px;
     margin: 0 auto;
+    
+    .moonBG {
+        position: absolute;
+        z-index: -10;
+        left:800px;
+        width: 1400px;
+        // overflow: hidden;
+        // border: 1px solid red;
+    }
 }
