--- a/src/app/pages/destinations/destinations.component.html
+++ b/src/app/pages/destinations/destinations.component.html
@@ -1,6 +1,8 @@
-<div class="q2">
-    <div class="circle2">2</div>
-</div>
 <div class="q1">
-    <div class="circle1">1</div>
+    1
+ </div>
+
+<div class="q2">
+ 2
 </div>
+<div class="divider"> 
