--- a/src/app/pages/destinations/destinations.component.scss
+++ b/src/app/pages/destinations/destinations.component.scss
@@ -2,25 +2,23 @@
     // position: absolute;
     // top: 40px;
     // left:70px;
-    // transform: translate(30px,50px);
+    transform: translate(190px,120px);
     color: black;
 width: 100px;
 height: 100px;
 background-color: red;
 // z-index: 10;
+// margin-bottom: 40px;
 
 }
-.circle1 {
-    width: 50px;
-    height: 50px;
-    background-color: green;
-    border-radius: 50%;
-    text-align: center;
-    z-index: 10;
- 
+.divider {
+    width: 100px;
+    // height: 100px;
+
+    border: 1px solid white;
+    position: static;
+    transform:translate(100px,-50px) ;
 }
-
-
 
 .q2 {
     color: black;
@@ -28,14 +26,5 @@ background-color: red;
     height: 100px;
     background-color: yellow;
     z-index: -10;
-    transform: translate(30px,50px);
-    }
-    .circle2 {
-        width: 50px;
-        height: 50px;
-        background-color: green;
-        border-radius: 50%;
-        text-align: center;
-        // z-index: 10;
-     
+    // transform: translate(30px,50px);
     }
