--- a/src/app/components/system/system.component.html
+++ b/src/app/components/system/system.component.html
@@ -4,22 +4,39 @@
                 <div>UNFORGETTABLE ADVENTURE</div>
                 <h1 class="mainTitle">CHOOSE YOUR DESTINATION</h1>
         </div>
-   
-        <div class="systemContainer">
-                <img src="../../../assets/orbitals/earth/orbital.svg" alt="" class="orbitalEarth">
-                
-            
-                <img src="../../../assets/orbitals/mars/orbitalMars.svg" class="marsOrbital" alt=""/>
-
-                <img src="../../../assets/orbitals/jupiter/orbitalJupiter.svg" alt="" class="orbitalJupiter">
-                <img src="../../../assets/planets/Jupiter/jupiter.png" alt="" class="jupiter"  data-planet="jupiter" [ngClass]="{ 'noneAnimation': isOpenPlanet }" (click)="handleClick($event)">
-                <div class="earthItems" [ngClass]="{ 'noneAnimation': isOpenPlanet }" >
-                        <img src="../../../assets/orbitals/earth/orbital.svg" alt="" class="orbitalMoon"/>
-                        <img src="../../../assets/planets/earth/HTV-HalseyComputer-Earth.webp" class="earth" data-planet="earth" (click)="handleClick($event)" alt=""/>           
-                        <img src="../../../assets/planets/earth/RS-Header-Moon_840px_3.webp" alt="" class="moon" [ngClass]="{ 'noneAnimation': isOpenPlanet }" data-planet="moon" (click)="handleClick($event)"/>
-                </div>
-                <div class="marsItem">
-                                <img src="../../../assets/planets/mars/Mars.png" class="mars" alt="" [ngClass]="{ 'noneAnimation': isOpenPlanet }"  data-planet="mars" (click)="handleClick($event)"/>    
-                </div>
+        <img src="../../../assets/orbitals/mars/mars.svg" class="marsOrbital" alt=""/>
+        <img src="../../../assets/orbitals/earth/earth.svg" alt="" class="orbitalEarth">
+        <img src="../../../assets/orbitals/moon/moon.svg" alt="" class="orbitalMoon" [ngClass]="{ 'noneAnimation': isOpenPlanet }"/>
+        <img src="../../../assets/orbitals/europa/europa.svg" alt="" class="orbitalEuropa" [ngClass]="{ 'noneAnimation': isOpenPlanet }"/>
+        <div class="marsItems" [ngClass]="{ 'noneAnimation': isOpenPlanet }"  >
+            <img src="../../../assets/planets/mars/Mars.png" 
+                 class="mars" 
+                 alt="" 
+                 data-planet="mars" 
+                 (click)="handleClick($event)"
+            /> 
+            <div class="mars-europa" [ngClass]="{ 'noneAnimation': isOpenPlanet }"></div>   
+            <img src="../../../assets/planets/europa/europa.png" 
+                class="europa" 
+                alt="" 
+                [ngClass]="{ 'noneAnimation': isOpenPlanet }" 
+                data-planet="mars" 
+                (click)="handleClick($event)"
+            />   
         </div>
+  
+        <div class="earthItems" [ngClass]="{ 'noneAnimation': isOpenPlanet }"> 
+                <img src="../../../assets/planets/earth/HTV-HalseyComputer-Earth.webp" 
+                     class="earth" 
+                     data-planet="earth" 
+                     (click)="handleClick($event)" 
+                     alt=""
+                /> 
+                <!-- <div class="earthSpan">Earth</div>   -->
+                <div class="earth-moon" [ngClass]="{ 'noneAnimation': isOpenPlanet }"></div>       
+                <div class="earth-mars" [ngClass]="{ 'noneAnimation': isOpenPlanet }"></div> 
+               
+                <img src="../../../assets/planets/earth/RS-Header-Moon_840px_3.webp" alt="" class="moon" [ngClass]="{ 'noneAnimation': isOpenPlanet }" data-planet="moon" (click)="handleClick($event)"/>
+        </div>
+
 </div>
